编写Student查询方法，sql中是一个连表查询，连接了class和student两张表 查询的结果有4个字段，但是在student里面只有3个字段，我们使用方式1将class里的cname字段添加到了Student类里 那么在我们填入ResultType的时候，会自动地帮我们把查询字段地值封装到返回值对象里面去，完成查询一个学生的时候也查询到了这个学生所对应的课程名字